2.13.0 (2024-12-18)
- Add Planet class (`from planet import Planet`)
  - Planet is a client that uses sync methods. Users do not have 
    to interact with asyncio to use the sync client.
  - the Planet class is implemented by calling out to the async methods.
    This should be transparent to users. Depending on uptake and feedback,
    the underlying implementation may change in the future (but we will commit
    to semantic versioning when it comes to breaking changes in the API).

2.12.0 (2024-12-09)
- Add parameters to the subscriptions list command: --source-type, --created, --start-time,
  --end-time, --updated, --hosting, --name, --name-contains, and --sort-by.
- Add parameters to the orders list command: --source-type, --name,
  --name-contains, --created-on, --last-modified, --hosting, and --sort-by.
- Remove the unused limit parameter of SubscriptionsClient.get_results_csv

2.11.0 (2024-10-21)

Added:
- Support for new Tanager item types and assets.

Updated:
- Development and release process documentation.

2.10.0 (2024-06-24)

Added:
- Adjust how PV source types are documented.

2.9.0 (2024-06-05)

Added:
- Support for forest_carbon_monitoring_3m (#1045).

2.8.0 (2024-06-05)

Added:
- Support for hosting parameter in Orders API (#1042)
- New Data API tests (#1041)

2.7.1 (2024-05-29)

Fixed:
- Rearranged arguments in Data API search commands to not break existing scripts  (#1038).

2.7.0 (2024-05-21)

Added:
- Support for using feature references in Orders API, Data API and Subscriptions APIs (#1032).

2.6.0 (2024-04-24)

Added:
- Support for analysis_ready_ps data layers in Subscriptions API (#1033).

2.5.0 (2024-04-04)

Added:
- Support Subscriptions API hosting block for Sentinel Hub in the CLI (#1029).
- Support for field_boundaries_sentinel_2_p1m in Subscriptions API (#1026)

2.4.0 (2024-03-19)

Added:
- Support Subscriptions API hosting block for Sentinel Hub (#1023).

2.3.0 (2024-02-09)

Added: