@@ -1,6 +1,8 @@
+Changelog moved to https://github.com/planetlabs/planet-client-python/releases
+
 2.13.0 (2024-12-18)
 - Add Planet class (`from planet import Planet`)
-  - Planet is a client that uses sync methods. Users do not have 
+  - Planet is a client that uses sync methods. Users do not have
     to interact with asyncio to use the sync client.
   - the Planet class is implemented by calling out to the async methods.
     This should be transparent to users. Depending on uptake and feedback,
